--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -30,6 +30,8 @@ body {
     line-height: 1.5;
     font-family: 'Poppins', sans-serif;
     // background-color: var(--clr-white);
+
+    background: #bababa;
     color: var(--clr-gray-dark-2);
     font-size: 1.6rem;
     @include ease;
